RESOLVED FIXED215679
REGRESSION(r265856) [GTK][WPE] hybi websockets tests failing
https://bugs.webkit.org/show_bug.cgi?id=215679
Summary REGRESSION(r265856) [GTK][WPE] hybi websockets tests failing
Lauro Moura
Reported 2020-08-19 19:46:25 PDT
List of tests: http/tests/websocket/tests/hybi/broken-utf8.html │·································· http/tests/websocket/tests/hybi/close-code-and-reason.html │·································· http/tests/websocket/tests/hybi/compressed-control-frame.html │·································· http/tests/websocket/tests/hybi/fragmented-control-frame.html │·································· http/tests/websocket/tests/hybi/interleaved-fragments.html │·································· http/tests/websocket/tests/hybi/invalid-encode-length.html │·································· http/tests/websocket/tests/hybi/invalid-masked-frames-from-server.html │·································· http/tests/websocket/tests/hybi/long-control-frame.html │·································· http/tests/websocket/tests/hybi/reserved-bits.html │·································· http/tests/websocket/tests/hybi/reserved-opcodes.html │·································· http/tests/websocket/tests/hybi/too-long-payload.html │·································· http/tests/websocket/tests/hybi/workers/close-code-and-reason.html
Attachments
Patch (11.31 KB, patch)
2020-08-19 20:37 PDT, Lauro Moura
no flags
Lauro Moura
Comment 1 2020-08-19 20:37:43 PDT
EWS
Comment 2 2020-08-20 06:06:24 PDT
Committed r265940: <https://trac.webkit.org/changeset/265940> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406909 [details].
Note You need to log in before you can comment on or make changes to this bug.