REGRESSION(r265856) [GTK][WPE] hybi websockets tests failing https://bugs.webkit.org/show_bug.cgi?id=215679

Reviewed by Carlos Garcia Campos.

Source/WebKit:

r265856 changed WebSocketChannel to expect AbnormalClosure when the
closing handshake is not received.

Covered by existing tests.

* NetworkProcess/soup/WebSocketTaskSoup.cpp:
(WebKit::WebSocketTask::didFail):

LayoutTests:

Rebaseline and update expectations.

* platform/glib/TestExpectations:
* platform/glib/http/tests/websocket/tests/hybi/close-code-and-reason-expected.txt:
* platform/glib/http/tests/websocket/tests/hybi/workers/close-code-and-reason-expected.txt:


Canonical link: https://commits.webkit.org/228444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265940 268f45cc-cd09-0410-ab3c-d52691b4dbfc